// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shinkansen-cogs/cogs/checkbox <Component /> With additional props renders 1`] = `
<div
  className="MOCK FEED TYPE"
>
  <h3>
    Hot Tracks
  </h3>
  <MockOrder
    feedType="MOCK FEED TYPE"
    order="MOCK ORDER"
  />
  <MockReset
    feedType="MOCK FEED TYPE"
    order="MOCK ORDER"
  />
  <MockPlaylists
    items={
      Array [
        Object {
          "artworkUrl100": "MOCK ARTWORK URL 100",
          "kind": "MOCK KIND",
          "name": "MOCK NAME",
          "url": "MOCK URL",
        },
      ]
    }
  />
</div>
`;

exports[`shinkansen-cogs/cogs/checkbox <Component /> With required props renders 1`] = `
<div
  className="MOCK FEED TYPE"
>
  <h3>
    Hot Tracks
  </h3>
  <MockOrder
    feedType="MOCK FEED TYPE"
    order="by-none"
  />
  <MockReset
    feedType="MOCK FEED TYPE"
    order="by-none"
  />
  <MockPlaylists
    items={Array []}
  />
</div>
`;
